[package]
name = "tokio"
# When releasing to crates.io:
# - Remove path dependencies
# - Update html_root_url.
# - Update doc url
#   - Cargo.toml
#   - README.md
# - Update CHANGELOG.md.
# - Create "v0.2.x" git tag.
version = "0.2.21"
edition = "2018"
authors = ["Tokio Contributors <team@tokio.rs>"]
license = "MIT"
readme = "README.md"
documentation = "https://docs.rs/tokio/0.2.21/tokio/"
repository = "https://github.com/tokio-rs/tokio"
homepage = "https://tokio.rs"
description = """
An event-driven, non-blocking I/O platform for writing asynchronous I/O
backed applications.
"""
categories = ["asynchronous", "network-programming"]
keywords = ["io", "async", "non-blocking", "futures"]

[features]
# Include nothing by default
default = []

# Includes basic task execution capabilities
rt-core = []
sync = ["fnv"]

[dependencies]
bytes = "0.5.0"
pin-project-lite = "0.1.1"

# Everything else is optional...
fnv = { version = "1.0.6", optional = true }
